login/registration compelte +  language change error

--- a/ma214310093/main.css
+++ b/ma214310093/main.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 .header {
-    background-image:url('http://www.cropwellbishopplan.co.uk/photos/youth_photos/SkatePark_finished/IMG_0684e.jpg');
+    background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSS0LdcGF0I6AMMOZM541ym3nJWDAjDZh6AC8Wx34zYUhfrIcL16A');
     color:white;
     text-align:center;
     padding:5px;
